force-app/main/default/objects/Email_Config__c/Email_Config__c.object-meta.xml
<CustomObject>
    <label>Email Config</label>
    <nameField>
        <label>Inbox Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>