force-app/main/default/objects/Email_Config__c/fields/Distribution_Type__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Type__c</fullName>
    <label>Distribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>