force-app/main/default/objects/Email_Config__c/fields/End_Working_Hour__c.field-meta.xml
<CustomField>
    <fullName>End_Working_Hour__c</fullName>
    <defaultValue>16</defaultValue>
    <label>End Working Hour</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>