force-app/main/default/objects/Email_Config__c/fields/Is_Calender__c.field-meta.xml
<CustomField>
    <fullName>Is_Calender__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Calender?</label>
    <type>Checkbox</type>
</CustomField>