force-app/main/default/objects/Email_Config__c/fields/Last_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Last_Order_No__c</fullName>
    <label>Last Order No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>