force-app/main/default/objects/Email_Config__c/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <label>SLA</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>