force-app/main/default/objects/Email_Config__c/fields/Start_Working_Hour__c.field-meta.xml
<CustomField>
    <fullName>Start_Working_Hour__c</fullName>
    <defaultValue>8</defaultValue>
    <label>Start Working Hour</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>