force-app/main/default/objects/Email_Config__c/listViews/AFI.listView-meta.xml
<ListView>
    <fullName>AFI</fullName>
    <columns>NAME</columns>
    <columns>Email_Address__c</columns>
    <columns>SLA__c</columns>
    <columns>Unit__c</columns>
    <columns>Entity__c</columns>
    <columns>Distribution_Type__c</columns>
    <columns>Is_Calender__c</columns>
    <columns>Start_Working_Hour__c</columns>
    <columns>End_Working_Hour__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>AFI</value>
    </filters>
    <label>AFI</label>
</ListView>