force-app/main/default/objects/Email_Config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email_Address__c</columns>
    <columns>SLA__c</columns>
    <columns>Unit__c</columns>
    <columns>Entity__c</columns>
    <columns>Distribution_Type__c</columns>
    <columns>Is_Calender__c</columns>
    <columns>Start_Working_Hour__c</columns>
    <columns>End_Working_Hour__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>